<resources>
    <string name="app_name">Minhas Tarefas</string>
    <string name="minhas">minhas</string>
    <string name="Tarefas">Tarefas</string>
    <string name="logotipo">LOGOTIPO</string>
    <string name="tarefas_titulo">Tarefas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="que_tal_adicionar_alguma_tarefa_na_sua_lista">Que tal adicionar alguma tarefa na sua lista?</string>
    <string name="opa_nao_ha_nada_aqui_fazer">Opa...não há nada aqui</string>
    <string name="imagemlistavazia">ImagemListaVazia</string>
    <string name="opa_nao_ha_nada_aqui_feitas">Opa...não há nada aqui</string>
    <string name="finalize_as_suas_tarefas_no_seu_tempo">Finalize as suas tarefas no seu tempo :)</string>
    <string name="opa_nao_ha_nada_aqui_progresso">Opa...não há nada aqui</string>
    <string name="inicie_alguma_tarefa_da_sua_lista">Inicie alguma tarefa da sua lista!</string>
    <string name="ate_logo">Até logo!</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="adicione_uma_tarefa_que_ainda_ser_feita">Adicione uma tarefa que ainda será feita</string>
    <string name="titulo_da_tarefa_">Título da tarefa</string>
    <string name="descricao_da_tarefa">Descrição da tarefa</string>
    <string name="opcional">opcional</string>
    <string name="criar_tarefa">Criar tarefa</string>
    <string name="editar_tarefa">Editar Tarefa</string>
    <string name="altere_uma_tarefa_existente">Altere uma tarefa existente</string>
    <string name="titulo_da_tarefa_editar">Título da tarefa</string>
    <string name="descricao_da_tarefa_editar">Descrição da tarefa</string>
    <string name="opcional_editar">opcional</string>
    <string name="salvar">Salvar</string>
    <string name="excluir_tarefa_feita">Excluir tarefa</string>
    <string name="descricao_feita">Preciso estudar alguns conceitos como herança.........</string>
    <string name="feita">Feita</string>
    <string name="titulo_feita">Estudar bastante POO!!!</string>
    <string name="titulo_progresso">Estudar bastante POO!!!</string>
    <string name="em_progresso">Em progresso</string>
    <string name="descricao_progresso">Preciso estudar alguns conceitos como herança.......</string>
    <string name="excluir_tarefa_progresso">Excluir tarefa</string>
    <string name="finalizar_tarefa_progresso">Finalizar tarefa</string>
    <string name="excluir_tarefa_fazer">Excluir tarefa</string>
    <string name="descricao_fazer">Preciso estudar alguns conceitos como herança...</string>
    <string name="a_fazer">A fazer</string>
    <string name="titulo_fazer">Estudar bastante POO!!!</string>
    <string name="iniciar_tarefa_fazer">Iniciar tarefa</string>
    <string name="pesquise_por_tarefas_a_fazer">Pesquise por tarefas a fazer</string>
    <string name="titulo_da_tarefa">Título da tarefa</string>
    <string name="procurar">Procurar</string>
</resources>