<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:id="@+id/layoutCriar"
        android:layout_height="match_parent"
        style="@style/AppModalStyle">

    <ImageView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="7dp"
            android:src="@drawable/shape_detalhe_bottom_sheet"/>

    <TextView
            android:textColor="@color/colorTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nova_tarefa"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>

    <TextView
            android:textColor="@color/colorDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicione_uma_tarefa_que_ainda_ser_feita"
            android:layout_marginTop="5dp"
            android:textSize="16sp"/>

    <EditText
            android:id="@+id/txtTituloCriarTarefa"
            android:paddingStart="10dp"
            android:inputType="textCapSentences"
            android:maxLength="25"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_da_tarefa"
            android:textSize="16sp"
            android:background="@drawable/shape_retangular"
            android:backgroundTint="#ECECEC"
            android:layout_marginTop="30dp"/>

    <EditText
            android:id="@+id/txtDescricaoCriarTarefa"
            android:paddingBottom="105dp"
            android:inputType="textMultiLine|textCapSentences"
            android:singleLine="false"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textDirection="ltr"
            android:hint="@string/descricao_da_tarefa"
            android:textSize="16sp"
            android:maxLines="20"
            android:background="@drawable/shape_retangular"
            android:layout_marginTop="20dp"/>

    <TextView
            android:textColor="@color/colorDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcional"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>

    <Button
            android:id="@+id/btnCriarTarefa"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_bottom_sheet"
            android:text="@string/criar_tarefa"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"/>
</LinearLayout>