<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppModalStyle">

    <ImageView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="7dp"
            android:src="@drawable/shape_detalhe_bottom_sheet"/>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">

        <ImageView
                android:id="@+id/imgVoltar"
                android:clickable="true"
                android:maxHeight="20dp"
                android:maxWidth="20dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="55dp"
                android:src="@drawable/ic_seta_esquerda"
                android:focusable="true"/>
        <ImageView

                android:layout_width="28dp"
                android:layout_height="66dp"
                android:layout_marginTop="36dp"
                android:layout_marginStart="40dp"
                android:src="@drawable/ic_linha_vertical"/>

        <TextView
                android:textColor="@color/colorTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/editar_tarefa"
                android:layout_marginStart="78dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

        <TextView
                android:textColor="@color/colorDescricao"
                android:layout_width="wrap_content"
                android:layout_marginStart="78dp"
                android:layout_height="wrap_content"
                android:text="@string/altere_uma_tarefa_existente"
                android:layout_marginTop="70dp"
                android:textSize="16sp"/>
    </FrameLayout>

    <EditText
            android:id="@+id/edtTituloEditar"
            android:paddingStart="10dp"
            android:inputType="textCapSentences"
            android:maxLength="25"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_da_tarefa_editar"
            android:textSize="16sp"
            android:background="@drawable/shape_retangular"
            android:backgroundTint="#ECECEC"
            android:layout_marginTop="20dp"/>

    <EditText
            android:id="@+id/edtDescricaoEditar"
            android:paddingBottom="105dp"
            android:inputType="textMultiLine|textCapSentences"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/descricao_da_tarefa_editar"
            android:textSize="16sp"
            android:maxLines="20"
            android:background="@drawable/shape_retangular"
            android:layout_marginTop="20dp"/>

    <TextView
            android:textColor="@color/colorDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcional_editar"
            android:textSize="12sp"
            android:layout_marginTop="5dp"/>

    <Button
            android:id="@+id/btnSalvarEditar"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_bottom_sheet"
            android:text="@string/salvar"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"/>
</LinearLayout>