<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:id="@+id/layoutCriar"
        android:layout_height="match_parent"
        style="@style/AppModalStyle">

    <ImageView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="7dp"
            android:src="@drawable/shape_detalhe_bottom_sheet"/>

    <TextView
            android:id="@+id/tituloProvisorio"
            android:textColor="@color/colorTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesquise_por_tarefas_a_fazer"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>

    <EditText
            android:id="@+id/txtProcurarTituloTarefa"
            android:paddingStart="10dp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/titulo_da_tarefa"
            android:textSize="16sp"
            android:background="@drawable/shape_retangular"
            android:backgroundTint="#ECECEC"
            android:layout_marginTop="30dp"/>

    <Button
            android:id="@+id/btnProcurar"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_bottom_sheet"
            android:text="@string/procurar"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"/>
</LinearLayout>