<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D8C9DF"
        tools:context=".ui.activity.Splash">

    <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_logo"
            android:layout_marginBottom="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/logotipo"/>

    <TextView
            android:id="@+id/txtMinhas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorLogoText"
            android:fontFamily="sans-serif-black"
            android:text="@string/minhas"
            android:layout_marginTop="130dp"
            android:layout_marginStart="65dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtTarefas"/>

    <TextView
            android:id="@+id/txtTarefas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/colorLogoText"
            android:text="@string/Tarefas"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtMinhas"/>

</androidx.constraintlayout.widget.ConstraintLayout>