<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppModalStyle">

    <ImageView
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="7dp"
            android:src="@drawable/shape_detalhe_bottom_sheet"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/btnEditarFinalizada"
                android:maxHeight="20dp"
                android:maxWidth="20dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="55dp"
                android:layout_marginStart="280dp"
                android:src="@drawable/ic_editar"/>

        <ImageView
                android:layout_width="28dp"
                android:layout_height="66dp"
                android:layout_marginTop="36dp"
                android:layout_marginStart="235dp"
                android:src="@drawable/ic_linha_vertical"/>

        <TextView
                android:id="@+id/txtTituloExcluir"
                android:textColor="@color/colorTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/titulo_feita"
                android:textStyle="bold"
                android:textSize="20sp"/>

        <TextView
                android:textColor="#8F8F8F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feita"
                android:layout_marginTop="70dp"
                android:textSize="16sp"/>
    </FrameLayout>

    <TextView
            android:id="@+id/txtDescricaoExcluir"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="@string/descricao_feita"
            android:maxLines="20"
            android:textSize="16sp"
            android:backgroundTint="#ECECEC"
            android:layout_marginTop="20dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

            <ImageView
                    android:layout_marginTop="119dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_excluir"/>
            <TextView
                    android:onClick="setOnClickListener"
                    android:id="@+id/btnExcluirTarefa"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="116dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:textColor="#D14793"
                    android:text="@string/excluir_tarefa_feita"
                    android:focusable="true"/>
        </LinearLayout>

        <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"/>

    </LinearLayout>

</LinearLayout>