<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frFeitas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents"
    tools:context=".ui.fragments.FeitasFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListaFeitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#ECECEC"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_tarefas_feitas" />

        <ImageView
            android:id="@+id/imgFeitasVazia"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="220dp"
            android:contentDescription="@string/imagemlistavazia"
            android:src="@drawable/ic_visionary" />

        <TextView
            android:id="@+id/txtFeitasVazia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="370dp"
            android:text="@string/opa_nao_ha_nada_aqui_feitas"
            android:textColor="@color/colorTitulo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt2FeitasVazia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="395dp"
            android:text="@string/finalize_as_suas_tarefas_no_seu_tempo"
            android:textColor="@color/colorTitulo"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnLupaFeitas"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:background="@drawable/ic_lupabuttonm" />
    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>